# rightmove_webscraper

./: .gitignore  README.md  pyproject.toml
rightmove_webscraper/: scraper.py  scraper_utils.py
tests/: rm_test.py  test_rm.py
