[tool.poetry]
name = "rightmove-webscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.2.2"
numpy = "^2.0.0"
pandas = "^2.2.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
